# elka_data_collection

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  tags
inc/: elka_defines.h  elka_log.h
src/: CMakeLists.txt
src/python/: CMakeLists.txt  elka.py  elka_comm_thread.py  elka_ground_port.py  gui.py  gui_start.py  test_qthread.py
